<resources>
    <string name="app_name">Top League</string>
    <string name="dummy_name">English Premiere League</string>
    <string name="league_trophy">League Trophy</string>
    <string name="dummy_desc">"The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL).

The Premier League is a corporation in which the member clubs act as shareholders. Seasons run from August to May with each team playing 38 matches (playing each other home and away). Most games are played on Saturday and Sunday afternoons. The Premier League has featured 47 English and two Welsh clubs since its inception, making it a cross-border league.

The competition was formed as the FA Premier League on 20 February 1992 following the decision of clubs in the Football League First Division to break away from the Football League, founded in 1888, and take advantage of a lucrative television rights deal. The deal was worth £1 billion a year domestically as of 2013–14, with BSkyB and BT Group securing the domestic rights to broadcast 116 and 38 games respectively. The league generates €2.2 billion per year in domestic and international television rights. In 2014–15, teams were apportioned revenues of £1.6 billion, rising sharply to £2.4 billion in 2016–17.

The Premier League is the most-watched sports league in the world, broadcast in 212 territories to 643 million homes and a potential TV audience of 4.7 billion people. In the 2014–15 season, the average Premier League match attendance exceeded 36,000, second highest of any professional football league behind the Bundesliga's 43,500. Most stadium occupancies are near capacity. The Premier League ranks second in the UEFA coefficients of leagues based on performances in European competitions over the past five seasons, as of 2018.

Forty-nine clubs have competed since the inception of the Premier League in 1992. Six of them have won the title: Manchester United (13), Chelsea (5), Arsenal (3), Manchester City (3), Blackburn Rovers (1), and Leicester City (1). Following the 2003–04 season, Arsenal acquired the nickname "The Invincibles" as they became, and still remain, the only club to complete a Premier League campaign without losing a single game. The record of most points in a season is 100 by Manchester City in 2017–18."</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next match</string>
    <string-array name="league_name">
        <item>English Premiere League</item>
        <item>French Ligue 1</item>
        <item>Germany Bundesliga</item>
        <item>Italian Seri-A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Premiere Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premiere League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_team_logo">Home Team Logo</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="match_date">15-11-10</string>
    <string name="match_time">14:00:00</string>
    <string name="match_score">0</string>
    <string name="match_team">Brighton</string>
    <string name="strip">:</string>
    <string name="score">Goals</string>
    <string name="yellow_card">"Yellow Card"</string>
    <string name="red_card">Red Card</string>
    <string name="cari_match">Cari Match</string>
    <string name="cari">Cari</string>
    <string name="league">League</string>
    <string name="favorite">Favorite</string>
</resources>