<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    android:layout_margin="4dp"
    android:layout_marginTop="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleMatch"
            android:text="@string/dummy_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHomeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_team"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/tvAwayName"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_team"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHomeScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_score"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/tvAwayScore"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_score"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_time"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_date"
                android:gravity="right"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>